# Inverse-Design-of-Light-trapping-Layers

./: .gitignore  .~lock.Status Slides Master.odp#  ANTIGRAVITY_RULES.md  Note for model training.txt  Recreate Hope's Results.ipynb  Status Slides Master.odp  main.py  notes for report.txt  plot_fabry_perot_grid.py  plot_n.py  pyproject.toml  scratch_flat_si.py  test_torcwa.py
Notebooks/: Modulated Silicon Data Generation.ipynb  Recreate Hope's Results.ipynb  Silicon Grating 3D and Staircase RCWA.ipynb  Silicon Modulation Sanity Checks.ipynb  Staircase Model Sanity Checks.ipynb  Train MLP on data.ipynb
Plots/: convergence_plots.py
Report/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  references.bib
Results/: timing_results.json
Scripts/: Modulated Silicon Data.ipynb  Recreate Hope's Results.ipynb  check_abs.py  consolidate_3d_dataset.py  consolidate_dataset.py  count_params.py  evaluate_2d_dataset_baseline.py  evaluate_3d_dataset_baseline.py  evaluate_3d_forward.py  evaluate_dataset_baseline.py  evaluate_forward.py  evaluate_generalization.py  evaluate_implicit_model.py  evaluate_inverse.py  evaluate_inverse_optimization.py  evaluate_models.py  evaluate_naive_optimization.py  evaluate_surrogate_optimization.py  find_exploded.py  generate_3d_dataset.py  generate_curve.py  generate_dataset.py  generate_dataset_cpu_parallel.py  generate_stats_table.py  generate_timing_table.py  patch_train_al.py  plot_convergence.py  submit_3d_dataset.sh  submit_3d_dataset_Ag.sh  submit_700nm.sh  submit_combinations.sh  submit_dataset.sh  (+19 more)
(+140 files in other folders)
