[project]
name = "rcwa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "torch==2.5.1",
    "torcwa>=0.1.4.2",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.10",
    "scipy>=1.16.3",
    "line-profiler>=5.0.0",
    "tqdm>=4.67.1",
    "pvlib>=0.13.1",
    "marimo>=0.21.0",
    "refractiveindex>=1.0.2",
    "einops>=0.8.2",
]



[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda"}

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
